--- a/src/app/page/events-list/events-list.component.html
+++ b/src/app/page/events-list/events-list.component.html
@@ -17,6 +17,7 @@
         <td>{{event.date}} </td>
         <td>{{event.time}}</td>
         <td>{{event.location}}</td>
+        <td><button [routerLink]="['event', event.id]">Edit</button></td>
         <td>
 
         </td>
